# Compiler-for-Pascal-0

./: --list-options  README.md  hmcompiler.cabal  run
examples/: fact.pas0
original_examples/: fact.pas0  fib.pas0  sort.pas0
src/: AST.hs  IR.hs  IntermCodeGen.hs  Lexer.x  MachineCodeGen.hs  Main.hs  Parser.y  Typecheck.hs
src/Inputs/: Input1.txt
src/dist-newstyle/cache/: compiler
testes/: code_duarte.txt  mips_function_correct.txt  teste3.txt
